@startuml
set separator none

left to right direction

package no.ntnu.tdt4240.project.engine.system {

class RemovalSystem {
# void processEntity(Entity,float)
}

class TutorialScenarioSystem {
# void processEntity(Entity,float)
- void updatePowerupTutorial(TutorialScenarioComponent,int,float)
- void updateSabotageTutorial(TutorialScenarioComponent,int)
- void applyForcedInvincibility()
- int getPlayerScore()
}

class SabotageEffectSystem {
# void processEntity(Entity,float)
- {static} float decToZero(float,float)
}

class PowerupEffectSystem {
# void processEntity(Entity,float)
- {static} float decToZero(float,float)
}

class TutorialPlayerShootingSystem {
- PlayerBullet playerBullet
- ImmutableArray<Entity> powerupEntities
+ void addedToEngine(com.badlogic.ashley.core.Engine)
# void processEntity(Entity,float)
}


class RenderSystem {
- TextureComponent tex
- PositionComponent pos
- DimensionComponent dim
- SpriteBatch batch
- Viewport viewport
+ void update(float)
+ void processEntity(Entity,float)
- float centerHorizontal()
- float centerVertical()
}


class EventSystem {
+ EventManager events
- HealthComponent component
# void processEntity(Entity,float)
- void process()
}


class InputSystem {
- PositionComponent pos
- GameInputProcessor input
# void processEntity(Entity,float)
- void process()
}


class ShootingSystem {
- PlayerBullet playerBullet
- EnemyBullet enemyBullet
- ImmutableArray<Entity> sabotageEntities
- ImmutableArray<Entity> powerupEntities
- ImmutableArray<Entity> players
+ void addedToEngine(com.badlogic.ashley.core.Engine)
# void processEntity(Entity,float)
}


class MovementSystem {
- PositionComponent pos
- VelocityComponent vel
- ImmutableArray<Entity> sabotageEntities
- ImmutableArray<Entity> powerupEntities
+ void addedToEngine(com.badlogic.ashley.core.Engine)
- void process(Entity,float)
+ void processEntity(Entity,float)
}


class WaveSystem {
- {static} float WAVE_TRANSITION_DELAY
# void processEntity(Entity,float)
- void configureWave(WaveComponent)
}


}

package com.badlogic.ashley.systems {

abstract class IteratingSystem

}

IteratingSystem <|-- SabotageEffectSystem
IteratingSystem <|-- PowerupEffectSystem
IteratingSystem <|-- RemovalSystem
IteratingSystem <|-- TutorialPlayerShootingSystem
IteratingSystem <|-- TutorialScenarioSystem
IteratingSystem <|-- RenderSystem
IteratingSystem <|-- EventSystem
IteratingSystem <|-- InputSystem
IteratingSystem <|-- ShootingSystem
IteratingSystem <|-- MovementSystem
IteratingSystem <|-- WaveSystem
@enduml